--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@actovision/kaptha-email-editor",
   "version": "1.0.0",
   "description": "React wrapper for Kaptha Email Editor - Production-ready email builder with React DnD and MJML",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,9 +10,11 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "default": "./dist/index.js"
     }
   },
+  "sideEffects": false,
   "files": [
     "dist",
     "README.md",
