--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -10,15 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^1.0.3",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@actovision/kaptha-email-editor": "^1.0.4",
+    "next": "16.0.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "typescript": "^5.3.3"
   }
 }
