--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -9,13 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^1.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@actovision/kaptha-email-editor": "^1.0.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
