--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "cypress open",
+    "test:e2e:ci": "cypress run"
   },
   "dependencies": {
     "@actovision/kaptha-email-editor": "^1.0.4",
@@ -19,6 +21,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "cypress": "^13.6.2",
     "typescript": "^5.3.3"
   }
 }
