--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "cypress open",
+    "test:e2e:ci": "cypress run"
   },
   "dependencies": {
     "@actovision/kaptha-email-editor": "^1.0.4",
@@ -17,6 +19,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
   }
