feat: update wrapper to use remote CDN URLs and React 18 compatibility
- Changed default CDN URLs from local (/cdn/*) to remote (code.kaptha.dev)
- Downgraded demo/react to React 18.3.1 for UMD compatibility
- Downgraded demo/nextjs to React 18.3.1
- Removed excessive console.log statements from wrapper
- Added Vite config optimizations for React deduplication
- Added tsup for modern build tooling
- Improved error handling without verbose logging
- Environment variables KAPTHA_EDITOR_JS_URL and KAPTHA_EDITOR_CSS_URL can override defaults

--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.5",
   "description": "React wrapper for Kaptha Email Editor - Production-ready email builder with React DnD and MJML",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.js",
-      "default": "./dist/index.js"
+      "default": "./dist/index.mjs"
     }
   },
   "sideEffects": false,
@@ -20,8 +21,8 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
+    "build": "tsup",
+    "dev": "tsup --watch",
     "clean": "rm -rf dist",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -61,9 +62,10 @@
     "@types/react-dom": "^19.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "ts-jest": "^29.1.1",
+    "tsup": "^8.5.1",
     "typescript": "^5.3.3"
   },
   "repository": {
