--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -12,15 +12,15 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^1.0.4",
+    "@actovision/kaptha-email-editor": "^1.0.5",
     "next": "16.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "cypress": "^13.6.2",
     "typescript": "^5.3.3"
   }
