--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -11,15 +11,16 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^1.0.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "@actovision/kaptha-email-editor": "^1.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "cypress": "^13.6.2",
+    "tsup": "^8.5.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11"
   }
