feat: update wrapper to v2.0.0 with framework-agnostic API
- Complete rewrite of src/index.tsx to use kapthaEmailEditor.init()
- Added API key authentication requirement
- Implemented forwardRef pattern for imperative editor methods
- Updated React peer dependencies to >=18.0.0 (forward compatible)
- Changed CDN URLs from editor.js to builder.js
- Component renamed: EmailEditor -> KapthaEmailEditor
- Comprehensive README update with migration guide
- Added CHANGELOG v2.0.0 with breaking changes documentation
- Created V2_MIGRATION.md with detailed migration examples
- Added test-wrapper-v2.html for testing
- Removed all third-party company references

BREAKING CHANGE: Requires API key, uses ref-based API instead of callbacks

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@actovision/kaptha-email-editor",
-  "version": "1.1.0",
-  "description": "React wrapper for Kaptha Email Editor - Production-ready email builder with React DnD and MJML",
+  "version": "2.0.0",
+  "description": "React wrapper for Kaptha Email Editor - A powerful drag-and-drop email editor with framework-agnostic API",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -51,8 +51,8 @@
     "npm": ">=11.0.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
