--- a/.github/workflows/sync-core-version.yml
+++ b/.github/workflows/sync-core-version.yml
@@ -75,14 +75,15 @@ jobs:
             This PR was automatically created in response to a new release in the core repository.
             
             ### Changes
-            - Updated CDN URLs to use major version path: `v${{ steps.version.outputs.major }}/`
-            - Ensures wrapper automatically receives minor and patch updates
+            - Core updated to version `${{ steps.version.outputs.version }}`
+            - Wrapper uses hybrid CDN strategy (no changes needed)
             
             ### Core Version Details
             - **Version**: ${{ steps.version.outputs.version }}
             - **Major Version**: v${{ steps.version.outputs.major }}
-            - **CDN JS**: https://code.kaptha.dev/core/v${{ steps.version.outputs.major }}/editor.js
-            - **CDN CSS**: https://code.kaptha.dev/core/v${{ steps.version.outputs.major }}/editor.css
+            - **Default CDN JS**: https://code.kaptha.dev/core/builder.js (auto-updates)
+            - **Default CDN CSS**: https://code.kaptha.dev/core/builder.css (auto-updates)
+            - **Pinned Version**: Use `KAPTHA_VERSION=${{ steps.version.outputs.version }}` to pin
             
             ### Source
             - **Repository**: ${{ github.event.client_payload.source_repo || 'Manual trigger' }}
@@ -112,9 +113,9 @@ jobs:
           echo "📦 Core version: $VERSION"
           echo "📍 Major version: v$MAJOR"
           echo ""
-          echo "✅ Wrapper uses hybrid approach:"
-          echo "   • Default: https://code.kaptha.dev/core/editor.js (auto-updates)"
-          echo "   • Pin version: KAPTHA_VERSION=1.0.1"
-          echo "   • Custom URL: KAPTHA_EDITOR_JS_URL override"
+          echo "✅ Wrapper uses hybrid CDN strategy:"
+          echo "   • Default: https://code.kaptha.dev/core/builder.js (auto-updates)"
+          echo "   • Pin specific version: KAPTHA_VERSION=1.0.1 or KAPTHA_VERSION=v1.0.1"
           echo ""
           echo "ℹ️  No wrapper changes needed - users get updates automatically"
+          echo "ℹ️  CDN handles versioned paths: /core/v1.0.1/builder.js when pinned"
