--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -12,10 +12,10 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^1.0.5",
+    "@actovision/kaptha-email-editor": "file:../..",
     "next": "16.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
