chore: update demos to use published package @2.0.1

--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -11,7 +11,7 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "file:../..",
+    "@actovision/kaptha-email-editor": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
