--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.11",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "ts-jest": "^29.1.1",
     "tsup": "^8.5.1",
     "typescript": "^5.3.3"
