fix: Add type: module to demos to resolve Vite CJS deprecation warning

--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -2,6 +2,7 @@
   "name": "kaptha-email-editor-react-demo",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "description": "React demo for @actovision/kaptha-email-editor",
   "scripts": {
     "dev": "vite",
