--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -2,6 +2,7 @@
   "name": "kaptha-email-editor-nextjs-demo",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "description": "Next.js demo for @actovision/kaptha-email-editor",
   "scripts": {
     "dev": "next dev",
