--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -12,12 +12,12 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^2.1.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@actovision/kaptha-email-editor": "file:../..",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "cypress": "^13.6.2",
