feat: add framework demos for Next.js, Vue, and Svelte
Add comprehensive demo applications for multiple frameworks:

Next.js Demo:
- Next.js 14 App Router with TypeScript
- Client-side component with 'use client' directive
- Custom blocks and design callbacks
- Production-ready configuration
- Cleaned up old test files (Cypress)

Vue 3 Demo:
- Vue 3 with Composition API (<script setup>)
- Custom wrapper component for CDN loading
- Reactive design state management
- Vue-friendly props interface (kebab-case)
- TypeScript support with proper type declarations

Svelte Demo:
- Svelte 4 with TypeScript
- Custom events for callbacks (on:ready, on:designChange)
- Reactive state management
- Clean lifecycle with onMount/onDestroy
- Idiomatic Svelte patterns

Common Features:
- Automatic CDN loading with date-based cache busting
- Custom blocks examples in each framework
- Proper cleanup on component unmount
- Loading states
- TypeScript support across all demos
- Comprehensive READMEs with usage examples

Documentation:
- Updated main demo README with all frameworks
- Framework-specific usage patterns and examples
- Quick start commands for each demo
- All demos tested and verified working

--- a/demo/nextjs/package.json
+++ b/demo/nextjs/package.json
@@ -2,27 +2,22 @@
   "name": "kaptha-email-editor-nextjs-demo",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "description": "Next.js demo for @actovision/kaptha-email-editor",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test:e2e": "cypress open",
-    "test:e2e:ci": "cypress run"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "^2.1.0",
-    "next": "16.0.7",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@actovision/kaptha-email-editor": "^3.0.0",
+    "next": "^14.2.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "cypress": "^13.6.2",
-    "typescript": "^5.3.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
