--- a/demo/react/package.json
+++ b/demo/react/package.json
@@ -12,7 +12,7 @@
     "test:e2e:ci": "cypress run"
   },
   "dependencies": {
-    "@actovision/kaptha-email-editor": "file:../..",
+    "@actovision/kaptha-email-editor": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
